Making it easy to test the errorreporter + a bugfix
Membership.GetUser() may throw an error, if the user has implemented a
custom membershipprovider, and an error happens inside that method. We
don't want to trigger a new exception inside the errorreporter, so we
have to hide that error.

--- a/Honeybadger.ErrorReporter/Honeybadger.ErrorReporter.nuspec
+++ b/Honeybadger.ErrorReporter/Honeybadger.ErrorReporter.nuspec
@@ -12,6 +12,6 @@
     <description>$description$</description>
     <releaseNotes>Initial</releaseNotes>
     <copyright>Copyright 2014</copyright>
-    <tags></tags>
+    <tags>Honeybadger ErrorReporter</tags>
   </metadata>
 </package>
